<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="title_name">Playlist Maker</string>
    <string name="button_Search">Поиск</string>
    <string name="button_Media">Медиатека</string>
    <string name="button_Settings">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="dark_Theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="subjectMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="web">https://yandex.ru/legal/practicum_offer/</string>
    <string name="yandex_mail">AndyRevolt@yandex.ru</string>
    <string name="trackName1">Smells Like Teen Spirit</string>
    <string name="artistName1">Nirvana</string>
    <string name="trackTime1">5:01</string>
    <string name="urlTrack1">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="trackName2">Billie Jean</string>
    <string name="artistName2">Michael Jackson</string>
    <string name="artistName3">Bee Gees</string>
    <string name="artistName4">Led Zeppelin</string>
    <string name="artistName5">Guns N\' Roses</string>
    <string name="trackName3">Stayin\' Alive</string>
    <string name="trackName4">Whole Lotta Love</string>
    <string name="trackName5">Sweet Child O\'Mine</string>
    <string name="trackTime2">4:35</string>
    <string name="trackTime3">4:10</string>
    <string name="trackTime4">5:33</string>
    <string name="trackTime5">5:03</string>
    <string name="urlTrack2">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="urlTrack3">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="urlTrack4">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="urlTrack5">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
</resources>