<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/arrowBack"
            style="@style/ButtonArrowBack" />

        <TextView
            style="@style/TopText"
            android:text="@string/settings" />

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/TextSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_Theme" />

    <TextView
        android:id="@+id/share"
        style="@style/TextSettings"
        android:drawableEnd="@drawable/share"
        android:text="@string/share" />

    <TextView
        android:id="@+id/support"
        style="@style/TextSettings"
        android:drawableEnd="@drawable/support"
        android:text="@string/support" />

    <TextView
        android:id="@+id/userAgreement"
        style="@style/TextSettings"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/agreement" />

</LinearLayout>

