<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Day_night_background_color_main_activity"
    android:orientation="vertical"
    tools:context=".main.UI.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:paddingLeft="12dp"
            android:paddingTop="10dp"
            android:text="@string/title_name"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="26dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/buttonSearch"
            style="@style/ButtonMainActivity"
            android:letterSpacing="0"
            android:text="@string/button_Search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/buttonMedia"
            style="@style/ButtonMainActivity"
            android:text="@string/button_Media"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/buttonSettings"
            style="@style/ButtonMainActivity"
            android:text="@string/button_Settings"
            app:icon="@drawable/settings" />

    </LinearLayout>

</LinearLayout>